Fix extra rendering and overflowing width

--- a/webapp/frontend/src/App.css
+++ b/webapp/frontend/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+.outer-container {
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+}
